--- a/11.kibana.yaml
+++ b/11.kibana.yaml
@@ -39,7 +39,7 @@ spec:
           name: webinterface
         env:
         - name: ELASTICSEARCH_HOSTS
-          value: "http://elasticsearch-client.kube-logging.svc.cluster.local:9200"
+          value: "http://elasticsearch-client.efk-logging.svc.cluster.local:9200"
         - name: ELASTICSEARCH_USER
           value: "elastic"
         - name: ELASTICSEARCH_PASSWORD
