--- a/11.kibana.yaml
+++ b/11.kibana.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: kibana
   labels:
     app: kibana
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 80
     name: webinterface
@@ -17,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: kibana
   labels:
     app: kibana
@@ -39,7 +39,7 @@ spec:
           name: webinterface
         env:
         - name: ELASTICSEARCH_HOSTS
-          value: "http://elasticsearch-client.efk-logging.svc.cluster.local:9200"
+          value: "http://elasticsearch-client.lead-gen.svc.cluster.local:9200"
         - name: ELASTICSEARCH_USER
           value: "elastic"
         - name: ELASTICSEARCH_PASSWORD
