--- a/2.elasticsearch-master-configmap.yaml
+++ b/2.elasticsearch-master-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: elasticsearch-master-config
   labels:
     app: elasticsearch
