--- a/3.elasticsearch-master-service.yaml
+++ b/3.elasticsearch-master-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: elasticsearch-master
   labels:
     app: elasticsearch
@@ -17,7 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: elasticsearch-master
   labels:
     app: elasticsearch
