--- a/4.elasticsearch-data-configmap.yaml
+++ b/4.elasticsearch-data-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: elasticsearch-data-config
   labels:
     app: elasticsearch
