--- a/6.elasticsearch-client-configmap.yaml
+++ b/6.elasticsearch-client-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: efk-logging
+  namespace: lead-gen
   name: elasticsearch-client-config
   labels:
     app: elasticsearch
